syntax = "proto3";


package proto;

import "google/protobuf/any.proto";

message ArticleObj {
    sint64 dbid = 1;
    string sourceId = 2;
    string title = 3;
    string contentHtml = 4;
    UserObj author = 5;
    string sourceSiteName = 6;
    sint64 SourcePubUTC = 7; //原文发布UTC时间
    string SourcePubTime = 8; //原文发布时间字符串格式
    string sourceUrl = 9; //链接地址
    repeated string thumbnailsUrl = 10; //缩略图
    MediaObj media = 11;
    string sourceSiteCode = 12;

    sint64 likeNum = 20; //点赞数
    sint64 commentNum = 21; //评论数
    sint64 readNum = 22; //阅读数
    sint64 createUTC = 23; //采集入库时间
    string createTime = 24; //采集入库

    map<string, google.protobuf.Any> otherData = 30;
}

message UserObj {
    sint64 dbid = 1;
    string sourceId = 2;
    string nickname = 3;
    string iconUrl = 4;
    string accountNum = 5;
    string sourceSiteName = 6;
    string homeUrl = 7;
    string des = 8;

    map<string, google.protobuf.Any> otherData = 30;
}

message MediaObj {
    string sourceId = 1;
    string videoSrc = 2; //视频源地址
    string videoHtmlUrl = 3; //视频播放地址

    map<string, google.protobuf.Any> otherData = 30;
}