syntax = "proto3";

package proto;



//文章数据
message ArticleObj {
    sint64 xsId = 1; //在采集系统中的文章id
    string sourceId = 2; //原平台文章ID
    string title = 3;
    string contentHtml = 4; //文章正文html
    repeated string thumbnailsUrl = 5; //缩略图
    string sourceWebUrl = 6; //文章链接
    string sourcePublishTimeStr = 7; //发文日期时间
    sint64 sourcePublishTimeUTCSec = 8; //发文时间日期UTC秒数
    string sourceSiteName = 9; //原网站名字
    ArticleMediaObj media = 10; //视频或其它多媒体数据

    string sourceHtml = 11; //文章源码，网页源码或接口源码

    sint64 sourceViewNum = 30; //源网站阅读数
    sint64 sourceCommentNum = 31; //源网站评论数
    sint64 sourceLikeNum = 32; //源网站点赞数

}

//文章视频数据
message ArticleMediaObj {
    string sourceId = 1; //视频id
    string videoSrc = 2; //视频源地址
    string videoHtmlUrl = 3; //视频播放页地址
    map<string, string> other = 4; //视频其它信息数据
}

//作者用户数据
message UserObj {
    sint64 xsId = 1; //在采集系统中id
    string sourceId = 2; //源平台id
    string accountNum = 3; //账号，例如微信公众号有微信号
    string nickname = 4; //昵称
    string iconUrl = 5; //头像
    string sourceSitename = 6; //所在网站名字
    string homeUrl = 7; //主页链接

    sint64 funNum = 20; //粉丝数
}

message ArticleAuthorObj {
    ArticleObj article = 1; //文章数据
    UserObj user = 2; //作者数据
}

//请求数据基础数据
message ActData {
    string requestId = 1; //请求Id
}

//返回结果
message ResultData {
    sint32 code = 1; //结果状态码
    string errmsg = 2; //结果描述
    string requestId = 3;
}

//文章列表
message ResultArticlesList {
    sint32 code = 1; //结果状态码
    string errmsg = 2; //结果描述
    UserObj author = 3; //作者
    repeated ArticleObj articles = 4; //文章数组
}

message UserAct {
    string requestId = 1;
    UserObj user = 2;
}

service RockCrawler {
    //根据作者所属网站名，采集系统内id,用户在原平台id，查询作者文章
    rpc LoadArticlesByUser (UserAct) returns (ResultArticlesList);
}